macros/src/orchestrator/parser/tests/snapshots/action_orc_macros__orchestrator__parser__tests__complex_graph.snap
---
source: macros/src/orchestrator/parser/tests/mod.rs
expression: ast
---
SyntaxTree {
    graphs: [
        Graph {
            entry: Declaration(
                Declaration {
                    var: Some(
                        "enter",
                    ),
                    typ: "Entering",
                },
            ),
            conns: [
                Declaration(
                    Declaration {
                        var: Some(
                            "inited",
                        ),
                        typ: "InitScene",
                    },
                ),
            ],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
        Graph {
            entry: Binding(
                Ident(
                    inited,
                ),
            ),
            conns: [
                Group(
                    GroupBlock {
                        mode: Parallel,
                        graphs: [
                            Graph {
                                entry: Declaration(
                                    Declaration {
                                        var: None,
                                        typ: "A",
                                    },
                                ),
                                conns: [],
                                span_info: SpanInfo {
                                    span: Span,
                                    at_call_site: false,
                                },
                            },
                            Graph {
                                entry: Declaration(
                                    Declaration {
                                        var: None,
                                        typ: "B",
                                    },
                                ),
                                conns: [],
                                span_info: SpanInfo {
                                    span: Span,
                                    at_call_site: false,
                                },
                            },
                            Graph {
                                entry: Declaration(
                                    Declaration {
                                        var: None,
                                        typ: "C",
                                    },
                                ),
                                conns: [],
                                span_info: SpanInfo {
                                    span: Span,
                                    at_call_site: false,
                                },
                            },
                        ],
                        span_info: SpanInfo {
                            span: Span,
                            at_call_site: false,
                        },
                    },
                ),
                Declaration(
                    Declaration {
                        var: Some(
                            "exit",
                        ),
                        typ: "Exiting",
                    },
                ),
            ],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
    ],
}
