macros/src/orchestrator/parser/tests/snapshots/action_orc_macros__orchestrator__parser__tests__declaration.snap
---
source: macros/src/orchestrator/parser/tests/mod.rs
expression: ast
---
SyntaxTree {
    graphs: [
        Graph {
            entry: Declaration(
                Declaration {
                    var: Some(
                        "a",
                    ),
                    typ: "A",
                },
            ),
            conns: [],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
    ],
}
