macros/src/orchestrator/parser/tests/snapshots/action_orc_macros__orchestrator__parser__tests__parallel_group_syntax.snap
---
source: macros/src/orchestrator/parser/tests/mod.rs
expression: ast
---
SyntaxTree {
    graphs: [
        Graph {
            entry: Declaration(
                Declaration {
                    var: None,
                    typ: "X",
                },
            ),
            conns: [
                Group(
                    GroupBlock {
                        mode: Parallel,
                        graphs: [
                            Graph {
                                entry: Declaration(
                                    Declaration {
                                        var: None,
                                        typ: "A",
                                    },
                                ),
                                conns: [
                                    Declaration(
                                        Declaration {
                                            var: None,
                                            typ: "B",
                                        },
                                    ),
                                ],
                                span_info: SpanInfo {
                                    span: Span,
                                    at_call_site: false,
                                },
                            },
                            Graph {
                                entry: Declaration(
                                    Declaration {
                                        var: None,
                                        typ: "C",
                                    },
                                ),
                                conns: [
                                    Declaration(
                                        Declaration {
                                            var: None,
                                            typ: "D",
                                        },
                                    ),
                                ],
                                span_info: SpanInfo {
                                    span: Span,
                                    at_call_site: false,
                                },
                            },
                        ],
                        span_info: SpanInfo {
                            span: Span,
                            at_call_site: false,
                        },
                    },
                ),
                Declaration(
                    Declaration {
                        var: None,
                        typ: "Y",
                    },
                ),
            ],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
    ],
}
